// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it passes a11y 1`] = `
<div>
  <div
    class="govuk-form-group lbh-form-group"
    id="test"
  >
    <label
      class="govuk-label lbh-label"
      for="test-field"
    >
      Input Test
      
    </label>
    <input
      class="govuk-input lbh-input"
      id="test-field"
      name="test"
    />
  </div>
</div>
`;

exports[`it renders correctly 1`] = `
<div>
  <input
    class="govuk-input lbh-input"
  />
</div>
`;

exports[`it renders correctly with an error 1`] = `
<div>
  <input
    class="govuk-input lbh-input govuk-input--error"
  />
</div>
`;
